--- a/CurrencyLanguage/CurrencyLanguage.vcxproj.filters
+++ b/CurrencyLanguage/CurrencyLanguage.vcxproj.filters
@@ -18,13 +18,13 @@
     <ClCompile Include="Lexer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Token.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Exceptions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TestsMain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
